--- a/style/mixins/input.scss
+++ b/style/mixins/input.scss
@@ -5,6 +5,7 @@
     border-style: none;
     border-bottom: 1px solid $color-black;
     padding: 8px 0;
+    font-size: inherit;
     &::placeholder {
         opacity: 0.5;
     }
@@ -13,5 +14,5 @@
 @mixin input-errmsg {
     color: $color-red;
     text-align: left;
-    font-size: 12px;
+    font-size: 0.8em;
 }
