feat: deposit 1. View mostly completed.

--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -5,11 +5,11 @@ $color-black: #000000;
 
 $color-bg: #204060;
 $color-bg-darker: #19334d;
-
 $color-font: $color-white;
 $color-font-darker: #7094db;
 
-$font-size-xs: 16px;
-$font-size-md: 20px;
+$color-success: $color-green;
+$color-err: #ff944d;
 
+$normal-spacing: 20px;
 $common-transition: 0.3s ease;
