style: custom rules of stylelint 1. Add custom rules of stylelint 2. run lint:css

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,2 @@
-@import "@/assets/styles/reset.scss";
-@import "@/assets/styles/vars.scss";
+@import '@/assets/styles/reset.scss';
+@import '@/assets/styles/vars.scss';
