--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -1,7 +1,7 @@
-$color-green: #33cc00;
+$color-green: #3c0;
 $color-grey: #262626;
 $color-white: #f2f2f2;
-$color-black: #000000;
+$color-black: #000;
 
 $color-bg: #204060;
 $color-bg-darker: #19334d;
