--- a/assets/styles/mixins/index.scss
+++ b/assets/styles/mixins/index.scss
@@ -1,3 +1,3 @@
-@import "~/style/mixins/clearfix.scss";
-@import "~/style/mixins/btn.scss";
-@import "~/style/mixins/input.scss";
+@import '~/style/mixins/clearfix.scss';
+@import '~/style/mixins/btn.scss';
+@import '~/style/mixins/input.scss';
