--- a/assets/styles/reset.scss
+++ b/assets/styles/reset.scss
@@ -1,28 +1,39 @@
 html {
-    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
-        sans-serif;
-    font-size: 16px;
-    word-spacing: 1px;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
+  box-sizing: border-box;
+  font-family:
+    'Source Sans Pro',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    sans-serif;
+  font-size: 16px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  word-spacing: 1px;
 }
+
 *,
-*:before,
-*:after {
-    box-sizing: border-box;
-    margin: 0;
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
 }
+
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
+
 a:active,
 a:link,
 a:visited {
-    color: inherit;
+  color: inherit;
 }
+
 input {
-    letter-spacing: 1.3px;
+  letter-spacing: 1.3px;
 }
