--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -3,13 +3,15 @@ $color-grey: #262626;
 $color-white: #f2f2f2;
 $color-black: #000;
 
-$color-bg: #204060;
-$color-bg-darker: #19334d;
-$color-font: $color-white;
+$color-bg: $color-white;
+$color-bg-darker: $color-white;
+$color-font: $color-black;
 $color-font-darker: #7094db;
 
 $color-success: $color-green;
 $color-err: #ff944d;
+
+$font-size-normal: 20px;
 
 $normal-spacing: 20px;
 $common-transition: 0.3s ease;
