--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,3 @@
-@import '@/assets/styles/reset.scss';
-@import '@/assets/styles/vars.scss';
+@import "@/assets/styles/reset.scss";
+@import "@/assets/styles/vars.scss";
+@import "@/assets/styles/the-tsn.scss";
