feat: basic layout of the-auth - And some css lint, like always. - Also add some font-size variables.

--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -11,7 +11,9 @@ $color-font-darker: #7094db;
 $color-success: $color-green;
 $color-err: #ff944d;
 
-$font-size-normal: 20px;
+$font-size-bg: 24px;
+$font-size-normal: 16px;
+$font-size-sm: 12px;
 
 $normal-spacing: 20px;
 $common-transition: 0.3s ease;
