--- a/assets/styles/reset.scss
+++ b/assets/styles/reset.scss
@@ -1,13 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family:
-    'Source Sans Pro',
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    'Helvetica Neue',
-    Arial,
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
     sans-serif;
   font-size: 16px;
   -moz-osx-font-smoothing: grayscale;
@@ -16,24 +9,20 @@ html {
   -webkit-text-size-adjust: 100%;
   word-spacing: 1px;
 }
-
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
 }
-
 a {
   text-decoration: none;
 }
-
 a:active,
 a:link,
 a:visited {
   color: inherit;
 }
-
 input {
   letter-spacing: 1.3px;
 }
