refactor: organize /assets/styles.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,3 +1,3 @@
-@import "@/assets/styles/reset.scss";
-@import "@/assets/styles/vars.scss";
-@import "@/assets/styles/the-tsn.scss";
+@import "@/assets/styles/reset";
+@import "@/assets/styles/vars";
+@import "@/assets/styles/classes";
