feat: new color theme. - Already apply in login page.

--- a/assets/styles/vars/color.scss
+++ b/assets/styles/vars/color.scss
@@ -10,3 +10,18 @@ $color-font-darker: #7094db;
 
 $color-success: $color-green;
 $color-err: #ff944d;
+
+// ----------------------------------------------
+
+$color-primary: #0a1e3d;
+$color-error: #db351f;
+$color-disabled: #e6e8eb;
+
+$color-background: #fff;
+$color-background-lv2: #e6e8eb;
+
+$color-border: #0a1e3d;
+
+$color-font-normal: #0a1e3db3;
+$color-font-light: #9fa5b1;
+$color-font-white: #fff;
