--- a/assets/styles/vars/font.scss
+++ b/assets/styles/vars/font.scss
@@ -1,3 +1,9 @@
 $font-size-bg: 24px;
-$font-size-normal: 16px;
+
 $font-size-sm: 12px;
+
+// ---------------------------------------
+$font-size-normal: 16px;
+
+$font-size-title: 24px;
+$font-size-small: 12px;
