--- a/assets/styles/reset/index.scss
+++ b/assets/styles/reset/index.scss
@@ -1,8 +1,16 @@
+@import "../vars/";
 html {
   box-sizing: border-box;
-  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+  font-family:
+    "Source Sans Pro",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
     sans-serif;
-  font-size: 16px;
+  font-size: $font-size-normal;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -ms-text-size-adjust: 100%;
@@ -13,6 +21,7 @@ html {
 *::before,
 *::after {
   box-sizing: border-box;
+  letter-spacing: 1.3px;
   margin: 0;
 }
 a {
@@ -23,6 +32,6 @@ a:link,
 a:visited {
   color: inherit;
 }
-input {
-  letter-spacing: 1.3px;
+.theme--light .v-icon {
+  color: inherit;
 }
