feat: apply new theme to layout components and wallet menu.

--- a/assets/styles/reset/index.scss
+++ b/assets/styles/reset/index.scss
@@ -1,6 +1,7 @@
 @import "../vars/";
 html {
   box-sizing: border-box;
+  color: $color-font-normal;
   font-family:
     "Source Sans Pro",
     -apple-system,
