--- a/assets/styles/vars/color.scss
+++ b/assets/styles/vars/color.scss
@@ -25,3 +25,6 @@ $color-border: #0a1e3d;
 $color-font-normal: #0a1e3db3;
 $color-font-light: #9fa5b1;
 $color-font-white: #fff;
+
+$color-black: #000;
+$color-white: #fff;
